# Bitter-Birds

./: .gitignore  123124.txt  CMakeLists.txt  Doxyfile  Meeting-notes.md  README.md  SavefileFormat.md
doc/: readme.md
levels/: level0.bblvl  level1.bblvl  level2.bblvl
libs/: readme.md
libs/box2d-2.4.1/: CMakeLists.txt  box2d.sln
libs/windows/box2d-2.4.1/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  box2d.sln  cmake_install.cmake
libs/windows/box2d-2.4.1/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  box2d.vcxproj  box2d.vcxproj.filters  cmake_install.cmake
libs/windows/box2d-2.4.1/src/box2d.dir/Debug/: box2d.lib.recipe
libs/windows/box2d-2.4.1/src/box2d.dir/Debug/box2d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  box2d.lastbuildstate
libs/windows/box2d-2.4.1/testbed/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  testbed.vcxproj  testbed.vcxproj.filters
libs/windows/box2d-2.4.1/unit-test/: INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  unit_test.vcxproj  unit_test.vcxproj.filters
plan/: readme.md
res/: README.md
src/: GUI.cpp  GUI.hpp  ReaderWriter.cpp  ReaderWriter.hpp  bird.cpp  bird.hpp  enemy.cpp  enemy.hpp  entity.cpp  entity.hpp  ground.hpp  image.cpp  image.hpp  level.cpp  level.hpp  levelEditorScene.cpp  levelEditorScene.hpp  main.cpp  menuScene.cpp  menuScene.hpp  nameEntryScene.cpp  nameEntryScene.hpp  playScene.cpp  playScene.hpp  readerWriter.cpp  readerWriter.hpp  readme.md  scene.cpp  scene.hpp  structure.cpp  structure.hpp
tests/: main.cpp  reader_writer_test.hpp  readme.md  test_utils.hpp
